fixes timeline on mobile

--- a/sites/all/themes/slac/css/style.css
+++ b/sites/all/themes/slac/css/style.css
@@ -10726,10 +10726,17 @@ a[href^="https://www-internal"]:after, a[href^="https://www-internal"]:hover:aft
     flex: 1 0 0%;
     margin-right: 15px;
     margin-bottom: 0;
-    margin-left: 15px;
-    margin: 0 auto; } }
+    margin-left: 15px; } }
 
-@media (min-width: 576px) {
+@media (max-width: 960px) {
+  .card-deck .card {
+    flex: 1 0 0%;
+    margin-right: 15px;
+    margin-left: 15px;
+    margin: 0 auto;
+    margin-bottom: 15px; } }
+
+@media (max-width: 768px) {
   .card-deck {
     margin: 0 auto; } }
 
@@ -11419,8 +11426,7 @@ ul.time-line {
 .card-header {
   background: #D8D8D8;
   text-align: center;
-  padding: 30px 10px;
-  height: 100%; }
+  padding: 30px 10px; }
   .card-header img {
     max-height: 56px;
     width: auto;
