--- a/sites/all/themes/slac/scss/components/_cards.scss
+++ b/sites/all/themes/slac/scss/components/_cards.scss
@@ -21,12 +21,22 @@
     margin-right: 15px;
     margin-bottom: 0;
     margin-left: 15px;
+  }
+}
+
+
+.card-deck .card {
+  @media (max-width: 960px) {
+    flex: 1 0 0%;
+    margin-right: 15px;
+    margin-left: 15px;
     margin: 0 auto;
+    margin-bottom: 15px;
   }
 }
 
 .card-deck {
-  @media (min-width: 576px) {
+  @media (max-width: 768px) {
     margin: 0 auto;
   }
 }
