--- a/sites/all/themes/slac/scss/components/_paragraph-cards.scss
+++ b/sites/all/themes/slac/scss/components/_paragraph-cards.scss
@@ -2,7 +2,6 @@
   background: $lightestgrey;
   text-align: center;
   padding: 30px 10px;
-  height: 100%;
 
   img {
     max-height: 56px;
